# pwsync-vita

./: Cargo.toml  README.md  install-sdk.sh  rust-toolchain.toml
.github/workflows/: rust.yml
src/: main.rs
src/res/: font.rs
